# RaieTracer2.0

./: .gitignore  CMakeLists.txt  README.md
data/: froggy.stl
data/models/: froggy_less.stl  lion.stl  new_froggy.stl  other_cup.stl  rot_less_cup.stl  teapot.stl  tinyteapot.stl  wall1.stl  wall2.stl
include/: blob.hh  camera.hh  image.hh  light.hh  map_collection.hh  maps.hh  material.hh  matrix.hh  model_collection.hh  object.hh  ray.hh  scene.hh  scene_collection.hh  texture.hh  utils.hh
src/: blob.cc  camera.cc  camera.hh  image.cc  image.hh  light.cc  light.hh  main.cc  maps.cc  material.cc  matrix.cc  matrix.hh  object.cc  object.hh  ray.cc  ray.hh  scene.cc  scene.hh  scene_collection.cc  test.cc  test_image.cc  test_vec3.cc  texture.cc  texture.hh  utils.cc  utils.hh
